--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.2",
     "install": "^0.13.0",
+    "mongodb": "^3.7.1",
     "mysql": "^2.18.1",
     "npm": "^8.2.0",
     "passport": "^0.5.0",
