--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "install": "^0.13.0",
     "mongodb": "^3.7.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "npm": "^8.2.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
